# PlayerRating

./: .env.example  .gitignore  README.md  SYSTEM_DESIGN.md  app.py  out.csv  output.csv  pyproject.toml  render.yaml
configs/: default_weights.json
data/: out.csv  player_rating.db  sample_player_history.csv
player_rating_tool/: __init__.py  classifier.py  cli.py  db.py  loader.py  models.py  rating.py  secrets.py  selector.py
